--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.2.0
 frozenlist==1.4.0
 fuzzywuzzy==0.18.0
+gunicorn==21.2.0
 idna==3.4
 importlib-metadata==6.8.0
 iniconfig==2.0.0
